added switch support

--- a/app.json
+++ b/app.json
@@ -21,7 +21,8 @@
     "name": "Bas Jansen",
     "email": "b@sjansen.email"
   },
-  "drivers": [{
+  "drivers": [
+    {
     "id": "light",
     "name": {
       "en": "Light"
@@ -54,5 +55,35 @@
         "template": "add_devices"
       }
     ]
-  }]
+  },
+  {
+    "id": "switch",
+    "name": {
+      "en": "Switch"
+    },
+    "class": "socket",
+    "capabilities": [
+      "onoff"
+    ],
+    "images": {
+      "large": "/drivers/switch/assets/images/large.png",
+      "small": "/drivers/switch/assets/images/small.png"
+    },
+    "pair": [{
+        "id": "list_devices",
+        "template": "list_devices",
+        "navigation": {
+          "next": "add_devices"
+        },
+        "options": {
+          "singular": false
+        }
+      },
+      {
+        "id": "add_devices",
+        "template": "add_devices"
+      }
+    ]
+  }
+  ]
 }
