--- a/app.json
+++ b/app.json
@@ -84,6 +84,35 @@
         "template": "add_devices"
       }
     ]
+  },
+  {
+    "id": "sensor",
+    "name": {
+      "en": "Sensor"
+    },
+    "class": "sensor",
+    "capabilities": [
+      "alarm_smoke"
+    ],
+    "images": {
+      "large": "/drivers/sensor/assets/images/large.png",
+      "small": "/drivers/sensor/assets/images/small.png"
+    },
+    "pair": [{
+        "id": "list_devices",
+        "template": "list_devices",
+        "navigation": {
+          "next": "add_devices"
+        },
+        "options": {
+          "singular": false
+        }
+      },
+      {
+        "id": "add_devices",
+        "template": "add_devices"
+      }
+    ]
   }
   ]
 }
